[package]
name = "bottled_honey"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
color-eyre = "0.6.3"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

opentelemetry = "0.24.0"
opentelemetry_sdk = { version = "0.24.1", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.5.0", features = ["trace"] }
tracing-opentelemetry = "0.25.0"
opentelemetry-otlp = { version = "0.17.0", features = [
    "http-proto",
    "reqwest-client",
] }
opentelemetry-semantic-conventions = "0.16.0"
tonic = "0.12.1"
reqwest = { version = "0.12.5", features = ["blocking"] }
console-subscriber = "0.3.0"
clap = { version = "4.5.16", features = ["derive", "env"] }
